--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     jdbc:
       initialize-schema: always
   datasource:
-    url: jdbc:h2:file:./db
+    url: jdbc:h2:mem:testdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -15,7 +15,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    defer-datasource-initialization: true
+    defer-datasource-initialization: false
+    database-platform: org.hibernate.dialect.H2Dialect
 
 file:
   input: data/movielist.csv
